pxc/tests/test_031_thrattr/udcon.px
public namespace udcon;
import common -;

function int foo(int x) {
  return x * x;
}

threaded struct bar(unit x) {
  int z = foo(5); // error: foo is not threaded
  public function int get() const {
    return z;
  }
}

function void t1() {
  bar b = bar(unit());
  println(b.get());
}

t1();

